src/components/modules/RideFeed/RideFeed.css
@import url("https://fonts.googleapis.com/css?family=Nunito");
@import url("https://fonts.googleapis.com/css?family=Montserrat");

.ride-feed-container {
  display: flex;
  flex-flow: column;
  width: 97%;
  height: 100%;
  overflow-y: auto;
  overflow-x: hidden;
  font-family: "Nunito";
}

.table-header {
  display: flex;
  flex-flow: row;
  min-height: 30px;
  min-width: 200px;
  width: 100%;
  color: #3d77ff;
  align-items: center;
  font-weight: 550;
  margin-left: 40px;
  font-size: 20px;
}

.from-to-title {
  width: 23%;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
}

.remaining-titles {
  width: 12.5%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.question-popover {
  font-family: "Montserrat";
  font-size: 10px;
}

.rideCard {
  display: flex;
  flex-flow: row;
  background-color: #ffffff;
  color: #5c5c5c;
  height: 110px;
  width: 100%;
  margin-top: 15px;
  padding-left: 40px;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1), 0 3px 10px 0 rgba(0, 0, 0, 0.1);
  align-items: center;
  border: 1px solid #c4c4c4;
}

.rideCard:hover {
  cursor: pointer;
}

.first-card-value {
  width: 12%;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
}

.second-card-value {
  width: 24.5%;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
}

.remaining-card-values {
  width: 12.5%;
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: 500;
  font-size: 25px;
  color: black;
}

.ride-detail-card {
  display: flex;
  flex-direction: row;
  width: 100%;
}

.ride-detail-photo {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 20%;
}

.ride-detail-photo img {
  width: 120px;
  height: 120px;
}

.driver-text {
  font-size: 20px;
  margin-bottom: 14px;
}

.ride-history-detail-photo {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  margin-left: 20px;
  width: 20%;
}

.ride-history-detail-photo img {
  width: 70px;
  height: 70px;
}

.ride-detail-info {
  display: flex;
  flex-direction: column;
  width: 33%;
}

.ride-detail-pickup {
  display: flex;
  flex-direction: column;
  width: 25%;
}

.license-phone-number {
  font-weight: bold;
  margin-bottom: 5px;
}

.pickup-location-text {
  font-size: 30px;
  margin-bottom: 5px;
}

.ride-detail-button {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 20%;
}

.ride-history-driver-container {
  display: flex;
  flex-direction: row;
}

.ride-history-driver-info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-left: 30px;
}

@media screen and (max-width: 950px) {
  .ride-feed-container {
    width: 97%;
  }

  .card-value {
    font-size: 80%;
  }

  .table-entry {
    font-size: 13px;
  }

  .rideCard {
    min-height: 70px;
  }
}

